fix button alignment within h1

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -155,7 +155,11 @@ h1 a, h1 a:hover, h1 a:active {
 	background-color: gray;
 }
 
-@media (max-width: @screen-xs-max) { 
+h1 a.btn {
+	vertical-align: top;
+}
+
+@media (max-width: @screen-xs-max) {
     .nav-tabs > li {
         float: none;
     }
